Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4529

HttpSM doesn't assign the right continuation when adjusting threads

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.0, 7.0.0
    • None
    • None

    Description

      We're still seeing some segfaults after testing shinrich's patch in
      https://github.com/apache/trafficserver/pull/688 more thoroughly.

      I have a patch that seems to fix those remaining issues and I'll open a Pull Request right away.

      Attachments

        Issue Links

          Activity

            People

              calavera David Calavera
              calavera David Calavera
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: