[TS-4529] Adjust thread with the right continuation. This closes #703.

Signed-off-by: David Calavera <david.calavera@gmail.com>
(cherry picked from commit bb4d873356a7760044f026c09811ae41134fc751)