proxy/ProxyClientTransaction.cc
@@ -86,13 +86,13 @@ ProxyClientTransaction::attach_server_session(HttpServerSession *ssession, bool 
 }
 
 Action *
-ProxyClientTransaction::adjust_thread(int event, void *data)
+ProxyClientTransaction::adjust_thread(Continuation *cont, int event, void *data)
 {
   NetVConnection *vc = this->get_netvc();
   EThread *this_thread = this_ethread();
   if (vc && vc->thread != this_thread) {
     if (vc->thread->is_event_type(ET_NET) || vc->thread->is_event_type(SSLNetProcessor::ET_SSL)) {
-      return vc->thread->schedule_imm(this, event, data);
+      return vc->thread->schedule_imm(cont, event, data);
     } else { // Not a net thread, take over this thread
       vc->thread = this_thread;
     }
