proxy/http/HttpSM.cc
@@ -2456,7 +2456,7 @@ HttpSM::state_cache_open_write(int event, void *data)
 
   // Make sure we are on the "right" thread
   if (ua_session) {
-    if ((pending_action = ua_session->adjust_thread(event, data))) {
+    if ((pending_action = ua_session->adjust_thread(this, event, data))) {
       return 0; // Go away if we reschedule
     }
   }
@@ -4664,7 +4664,7 @@ HttpSM::do_http_server_open(bool raw)
 
   // Make sure we are on the "right" thread
   if (ua_session) {
-    if ((pending_action = ua_session->adjust_thread(EVENT_INTERVAL, NULL))) {
+    if ((pending_action = ua_session->adjust_thread(this, EVENT_INTERVAL, NULL))) {
       return; // Go away if we reschedule
     }
   }
